[package]
authors = [
    "Luqman Aden <me@luqman.ca>",
    "Kenan Sulayman <kenan@sly.mn>",
]
description = "Coinbase GDAX™ API client"
license = "MIT"
name = "gdax-client"
repository = "https://github.com/mahsu/gdax-client.git"
version = "1.0.2"

[dependencies]
base64 = "0.6.0"
hyper = "0.10.12"
hyper-native-tls = "0.2.4"
rust-crypto = "0.2.36"
serde = "1.0.12"
serde_derive = "1.0.12"
serde_json = "1.0.3"
time = "0.1.38"
type-name = "0.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.uuid]
features = [
    "serde",
    "v4",
]
version = "0.5.1"

[dependencies.ws]
version = "*"
features = ["ssl"]

[dev-dependencies]
env_logger = "0.4.3"

